# agent-skills-factory

./: .gitignore  README.md  UNFINISHED_WORK.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  package-lock.json  plan.md
backend/: .env.example  README.md  pip.conf  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260508_0001_initial_schema.py  20260508_0002_sessions_auth_nullable.py  20260508_0003_seed_demo_agent.py  20260508_0004_agent_instruction_demo_skill.py  20260508_0005_seed_policy_contract_agents.py  20260508_0006_skills_package_metadata.py  20260508_0007_seed_prd_sample_agents.py  20260509_0008_demo_skill_eval_metadata.py  20260509_0009_agent_model_policy_qwen_to_minimax.py  20260510_0001_seed_agents_folder_skills_placeholder.py  20260511_0001_sessions_allowed_agents.py  20260512_0001_sessions_permissions_revoke.py  20260512_0002_seed_repo_skills_bundles_placeholder.py  20260512_0003_file_uploads_mime_type_length.py  20260512_0004_user_agent_memory.py  20260514_0001_sessions_data_domains.py  20260514_0002_directory_tools_policies_support.py  20260515_0001_session_memory_and_skill_conditions.py  20260515_0002_sessions_runtime_context.py  20260515_0003_user_agent_memory_segments.py  20260515_0004_create_transcript_events.py  20260521_0001_openclaw_tool_support.py
backend/scripts/: benchmark_health_smoke.py  init_db.py  local_env.py  run_skill_eval.py  sync_agents_from_repo.py  sync_skills_from_repo.py  test_minimax_openai_chat.py  validate_eval_jsonl.py  validate_skill_md_files.py  verify_p0.py
backend/src/agent_factory/: __init__.py  main.py
backend/tests/integration/: test_admin_api.py  test_agent_registry_api.py  test_api_smoke.py  test_audit_api.py  test_auth_flow.py  test_db_migration_smoke.py  test_metrics_frontend.py
backend/tests/unit/: test_agent_disable.py  test_agent_effective.py  test_agent_registry_tags.py  test_agent_yaml.py  test_agents_upload_hash.py  test_app_studio_compose.py  test_app_studio_service.py  test_attachment_policy.py  test_audit_csv_row.py  test_compiler.py  (+100 more)
(+422 files in other folders)
